[tool.poetry]
name = "sql-coding-tutor"
version = "0.1.0"
description = ""
authors = ["Ittichai Boonyarakthunya <ittichaib@wha-digital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
